<package format="2">
  <name>manajemen_buku</name>
  <version>0.0.1</version>
  <description>Manajemen Buku dengan ROS Noetic</description>

  <maintainer email="youremail@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
</package>
